# CozyML

frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.tsx  layout.tsx
frontend/src/api/: axios.ts
frontend/src/components/: Header.tsx  buttons.tsx  cards.tsx  dropdown.tsx  sidebar.tsx
frontend/src/screens/: Header.tsx  Home.tsx  Insights.tsx
frontend/src/store/: ui.store.ts
nest-backend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  prisma.config.ts
nest-backend/src/: app.controller.ts  app.module.ts  app.service.ts
nest-backend/src/ml/: ml.controller.ts  ml.service.ts
nest-backend/src/ml/dto/: payload.dto.ts
nest-backend/src/pipes/: payload-validation.pipe.ts
python-backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
python-backend/dto/: output.py  process.dto.py  process.py
python-backend/services/: ai_response.py  data_processing.py  data_validation.py  ml_processing.py
