[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "pandas>=3.0.2",
    "pydantic>=2.13.0",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.44.0",
]
